--- a/Views/Curso/VerCurso.cshtml
+++ b/Views/Curso/VerCurso.cshtml
@@ -50,7 +50,9 @@
                         <h4>Precio</h4>
                         <p>S/. @Model.precio</p>
                     </div>
-                    
+                </div>
+                <div class="row">
+                    <button class="btn btn-primary">Inscribirse</button>
                 </div>
     
     </div>
