--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
  
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/custom.css" />
+    <link rel="stylesheet" href="~/css/skeleton.css" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -15,7 +17,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div style="display: flex; justify-content: space-between; align-items: center;" class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active"asp-controller="Home" asp-action="Index" >INICIO</a>
@@ -26,10 +28,37 @@
               <li class="nav-item">
                 <a class="nav-link" asp-controller="Curso" asp-action="ListarCursos">CURSOS</a>
               </li>
-              
+
+                
+            </ul>
+
+             <div class="two columns u-pull-right"></div>
+                <ul style="list-style: none;">
+                    <li class="submenu">
+                            <img class="mt-3" src="~/img/cart.png" id="img-carrito">
+                            <div id="carrito">
+                                    
+                                    <table id="lista-carrito" class="u-full-width">
+                                        <thead>
+                                            <tr>
+                                                <th>Imagen</th>
+                                                <th>Nombre</th>
+                                                <th>Precio</th>
+                                                <th>Cantidad</th>
+                                                <th>Eliminar</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="body"></tbody>
+                                    </table>
+
+                                    <a asp-controller="Carro" asp-action="MostrarItems" class="button u-full-width">Ir al carrito de compras</a>
+                            </div>
+                    </li>
+                </ul>
+            </div>
+            
               <partial name="_LoginPartial" />
-                
-                
+          
             </ul>
           </div>
         </div>
