--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,14 +44,13 @@
                                                 <th>Imagen</th>
                                                 <th>Nombre</th>
                                                 <th>Precio</th>
-                                                <th>Cantidad</th>
-                                                <th>Eliminar</th>
+                                                <th>Inicio</th>
                                             </tr>
                                         </thead>
                                         <tbody id="body"></tbody>
                                     </table>
 
-                                    <a asp-controller="Carro" asp-action="MostrarItems" class="button u-full-width">Ir al carrito de compras</a>
+                                    <a asp-controller="Proforma" asp-action="MostrarItems" class="button u-full-width">Ir al carrito de compras</a>
                             </div>
                     </li>
                 </ul>
@@ -74,17 +73,14 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Repaso_Net - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+   
 
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
