--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Identity
+@using System.Threading.Tasks
 @inject SignInManager<Usuario> SignInManager
 @inject UserManager<Usuario> UserManager
 
@@ -9,6 +10,31 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+
+    Usuario myidentity = await Task.Run(() => UserManager.GetUserAsync(User));
+    var roles = await Task.Run(() => UserManager.GetRolesAsync(myidentity));
+
+    @if(roles.Contains("administrador")){
+
+         <li class="nav-item">
+            <a class="nav-link color"  asp-controller="Pago" asp-action="Pendientes">Pagos pendientes</a>
+        </li> 
+    
+    }else {
+
+        <li class="nav-item">
+            <a class="nav-link color"  asp-controller="Pago" asp-action="MisPedidosPendientes">Pedidos Pendientes</a>
+        </li> 
+        <li class="nav-item">
+            <a class="nav-link color"  asp-controller="Pago" asp-action="MisPedidos">Mis pedidos</a>
+        </li> 
+
+        <li class="nav-item">
+            <a class="nav-link color"  asp-controller="Curso" asp-action="MisCursos">Mis cursos</a>
+        </li>
+    }
+
+
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"> @User.Identity.Name!</a>
     </li>
