--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -35,6 +35,16 @@ html {
   }
 }
 
+.aling-x {
+  
+   padding-right: 20px;
+
+}
+
+.puntero {
+  cursor: pointer;
+}
+
 .border-top {
   border-top: 1px solid #e5e5e5;
 }
